# Falling-Shapes-Game

./: .gitignore  CMakeLists.txt  README.md
include/: character.h  game.h  input.h  render.h  utils.h
src/: character.c  game.c  input.c  main.c  render.c  utils.c
